DECA-275: Tweaked the styling of the dimension and colour selectors. Fixed an issue where the accordion container was showing a scrollbar.

--- a/components/exporter/css/pdfExporter.css
+++ b/components/exporter/css/pdfExporter.css
@@ -60,7 +60,7 @@
     background-color: #F9F9FA;
     box-shadow: inset 0px 0px 4px rgba(188,188,188,0.7);
     position: relative;
-    height: 8em;
+    height: 9em;
 }
 
 
@@ -76,4 +76,15 @@
     box-shadow: inset 0px 0px 4px rgba(188,188,188,0.7);*/
     position: relative;
     padding-top: 10px;
+}
+
+.ds-pdfExporter-pdfExportOptions-form {
+    margin-right:auto;
+    margin-left:auto;
+    width: 65%;
+}
+
+.ds-pdfExporter-pdfExportOptions-form select {
+    width: 12em;
+    margin-left: 0.5em;
 }
